# Binance_Rust_KDB

./: README.md  simple_check.q
simple_stream/: Cargo.toml
simple_stream/src/: main.rs
