[package]
name = "simple_stream"
version = "0.1.0"
edition = "2024"

[dependencies]
kxkdb = { version = "0.0", features = ["ipc"] }
tokio = { version = "1.24", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde_json = "1.0"